<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appspiration</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
       <string name="action_create">Create</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>
    <string name="hint">Fragment #%d</string>
    
</resources>