<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <!-- View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="25sp"
            android:textStyle="bold" />
        
        <!-- Name Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/name" />
        <!-- Name TextField -->

        <EditText
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Name" 
            android:inputType="textNoSuggestions|text"
            android:maxLength="45" />

        <!-- Username Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/username" />
        <!-- Username TextField -->

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Username"
            android:inputType="textNoSuggestions|text"
            android:maxLength="12" />

        <!-- Password Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/pwd" />
        <!-- Password TextField -->

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:inputType="textNoSuggestions|textPassword"
            android:maxLength="16" />

        <!-- Error message -->

        <TextView
            android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="#FF5722"
            android:onClick="registerUser"
            android:text="@string/btnRegister"
            android:textColor="#fff" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@null"
            android:onClick="navigatetoLoginActivity"
            android:text="Back To Login"
            android:textColor="#1B5E20" />
    </LinearLayout>

</ScrollView>